﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-02-13
	Fixed: ArgumentOutOfRangeException caused by saving foreground hysterisis.
	Changed: Improved network error reporting.
	Internal: Some timer changes, should have no impact to end-users.
	Fixed: Rare assertion failure in Audio component if Process Manager has not yet been loaded and hooked into it.
### 2019-02-12
	Added: Advanced config dialog. Mostly for slowly adding missing confguration options in.
### 2019-02-11
	Fixed: Per rule log adjusts was not saved if disabled.
	Fixed: NullReferenceException & ArgumentException in relation to WinEventProc
	Fixed: Watchlist rule adjust count was not updated.
	Fixed: Path matching was broken in recent update.
	Changed: Initial component configuration detection method was not enabling the controls properly.
	Changed: Power and NVM monitors are disabled by default in initial config.
	Removed: Path manager option from component configuration, it has not been used for a while.
		Achieve same result by never defining paths.
	Changed: CPU hid from main UI if relevant component is disabled.
	Added: Hardware monitor in experiment config.
	Changed: Experiment dialog improved and it now asks for restart if saved.
	Fixed: Added several missing items from watchlist rule copy to clipboard function.
	Fixed: Watchlist sorting is better and does so correctly with priority and power columns.
	Changed: Default watchlist updated and made to have all rules disabled by default. It's an example, not recommended.
### 2019-02-10
	Changed: I/O priority requires `IO Priority=true` in [Experimental] in Core.ini.
	Added: I/O priority is now in experiment config dialog and in watchlist rule editor.
	Fixed: Watchlist search now clears itself on timer as intended.
	Added: Ctrl-Backspace now tries to clear text to last whitespace character instead of printing weird character.